projects/compiler/test/typechecker/match/error_exhaustive_Enum_variants.2.out
Error at %TEST_DIR%/typechecker/match/error_exhaustive_Enum_variants.2.abra:9:3
Unreachable match case
  |    else => 5
       ^
The previous case(s) cover all possibilities for match target type 'Color?'
